--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,15 @@
 @import "tailwindcss";
+@import url('https://fonts.googleapis.com/css2?family=Schoolbell&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap');
 
+.main-heading{
+    -webkit-text-stroke: 2px black;
+}
 
+.font-school{
+    font-family: "Schoolbell", cursive;
+}
+
+.font-luckiest{
+    font-family: "Luckiest Guy", cursive;
+}
